# ChangeLog for x11-libs/pdcurses
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Jan 2008; (Tommy[D]) tommy100@gmx.de pdcurses-2.8.ebuild:
  drop WANT_AUTO*

  17 Dec 2006; Santiago M. Mola <cooldwind@gmail.com> pdcurses-2.8.ebuild:
  Clearer message about Xaw3d and nextaw

  05 Oct 2006; Markus Ullmann <jokey@gentoo.org> pdcurses-2.8.ebuild:
  Add missing autoconf/automake dependency

  12 Aug 2006; Tiziano Müller <gentoo@dev-zero.ch> +pdcurses-2.8.ebuild,
  +files/pdcurses-2.8-configure.patch, +metadata.xml:
  New ebuild for bug #94414
