@@ -1,5 +1,5 @@
 AUX pdcurses-2.8-configure.patch 1379 RMD160 f9ac5eca0c4626284a37e07ef7778acddb7869dc SHA1 a16922aef14efb9e89180c7bd1d1aa1be1d0fbf2 SHA256 114acd433bab0d1afa82aed8717b92bae732d3448891ca28c94b03bd50ff7132
 DIST PDCurses-2.8.tar.gz 325074 RMD160 7976ad40a13bdcc2e72e7d4bf396d7f8d5a237b8 SHA1 219b9028616af9cad50ba25d41b3673690d005b1 SHA256 e288ac5191de78c31635372f7cd31676561f5a9588258f41dac771ee9248b095
 EBUILD pdcurses-2.8.ebuild 1907 RMD160 64286030ec1d6bca83e469c7ffb5ae2a0c8325e3 SHA1 ea8149e230e557391a92dc54ec1add5bbfb2a827 SHA256 f70890cb80b2f6772a16b8ef490b51682303697110134cb51572cbb9903059a9
-MISC ChangeLog 588 RMD160 f09981fbb4fc93fedb15b7dad2a5ca6ef62f48eb SHA1 8be1d3b9e76534a22d4963a78202ec5eac88ef47 SHA256 692aea2cd13398fab22bec94567013565a3a61f7b83735e73aa1be08ed900b53
-MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
+MISC ChangeLog 709 RMD160 1987d601e48634060bd1d521f923fcef663eafb2 SHA1 e3e6e19903f29bb4e81c9eaea072c033897b8e19 SHA256 6ede46372dcfbeac985af8d243662c9f0d28f24ebb762a833a47b65ba2175b6d
+MISC metadata.xml 312 RMD160 be2b1d0f285161572f12e8b7e0e53d792ca202cb SHA1 ef1984244f1d7dbabad5fcdf8e708cf52cf455d2 SHA256 0e97cddf484f3c159ed972e13acbc264345a67784ef42558aaf9ce07b387af7e
